Add SimpleAnalytics script-tag

--- a/index.html
+++ b/index.html
@@ -373,5 +373,8 @@
     card.style.zIndex = '5';
   }
 </script>
+
+<script async defer src="https://simplea.sprax2013.de/latest.js"></script>
+<noscript><img src="https://simplea.sprax2013.de/noscript.gif" alt=""></noscript>
 </body>
 </html>
