Add Legal/Impressum and Privacy page

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <hr>
 
     <div class="text-center">
-      <h3>Überschrift?</h3>
+      <h3>Wir im Skulpturengarten Darmstadt</h3>
 
       <p class="blockquote">
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -293,6 +293,8 @@
 
 <footer class="footer mt-auto py-3 bg-light">
   <div class="container">
+    <small><a href="legal.html" class="link-dark">Impressum</a> | <a href="privacy.html" class="link-dark">Datenschutzbestimmung</a></small>
+
     <small class="text-muted float-end">Copyright &copy; Some rights reserved.</small>
   </div>
 </footer>
