Move media-template into parent directory

--- a/resources/index.html
+++ b/resources/index.html
@@ -25,7 +25,7 @@
         <!-- TODO: Add animation to card close -->
 
         <% mediaList.forEach((m, index) => { %>
-        <%- include(`${RES_DIR}/.templates/media/media.html`, {info: m, index}); %>
+        <%- include(`${RES_DIR}/.templates/media.html`, {info: m, index}); %>
         <% }); %>
       </div>
     </div>
