Replace Lorem ipsum with own text (+OpenGraph)

--- a/resources/index.html
+++ b/resources/index.html
@@ -6,7 +6,7 @@
 
   <%- include(`${RES_DIR}/.templates/head.html`); %>
 
-  <title>HEMS-Skulpturengarten 2020/2021</title>
+  <title><%= pageTitle %></title>
 </head>
 <body class="d-flex flex-column h-100">
 <%- include(`${RES_DIR}/.templates/header.html`); %>
@@ -36,20 +36,14 @@
       <h3>Wir im Skulpturengarten Darmstadt</h3>
 
       <p class="blockquote">
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-        Cum
-        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        Im Rahmen der Kurse <em>Kreatives Schreiben</em> und <em>Darstellendes Spiel</em> sind wir
+        mit unseren Lehrerinnen einen Nachmittag im <em>Skulpturengarten Darmstadt</em> gewesen und
+        wurden dort von Frau Kuhlmann durch das Gelände geführt.
       </p>
 
       <p class="blockquote">
-        Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec
-        pede
-        justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-      </p>
-
-      <p class="blockquote">
-        In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.
-        Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+        Wir haben uns von den einzelnen Ausstellungsstücken unter anderem zu Texten inspirieren lassen und uns dazu
+        entschlossen, diese aufzubereiten und für Interessierte auf dieser Webseite auszustellen.
       </p>
     </div>
   </div>
@@ -61,9 +55,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/5.1.0/screenfull.min.js"
         integrity="sha512-SGPHIoS+NsP1NUL5RohNpDs44JlF36tXLN6H3Cw+EUyenEc5zPXWqfw9D+xmvR00QYUYewQIJQ6P5yH82Vw6Fg=="
         crossorigin="anonymous" async defer></script>
-<script>
-
-</script>
 
 <%- include(`${RES_DIR}/.templates/scripts.html`); %>
 </body>
