--- a/resources/legal.html
+++ b/resources/legal.html
@@ -6,7 +6,7 @@
 
   <%- include(`${RES_DIR}/.templates/head.html`); %>
 
-  <title>Impressum | HEMS-Skulpturengarten 2020/2021</title>
+  <title>Impressum | <%= pageTitle %></title>
 </head>
 <body class="d-flex flex-column h-100">
 <%- include(`${RES_DIR}/.templates/header.html`); %>
