--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -1,3 +1,4 @@
+<!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="<%- url.root %>/img/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="<%- url.root %>/img/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="<%- url.root %>/img/favicon/favicon-16x16.png">
@@ -8,6 +9,27 @@
 <meta name="msapplication-config" content="<%- url.root %>/img/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
+<!-- SEO -->
+<% const pageDesc = 'Im Rahmen des Schulunterrichts, sind wir als Klasse im Skulpturengarten Darmstadt ' +
+                    'gewesen und haben unsere entstandenen Texte hier in aufbereiteter Form veröffentlicht.'; -%>
+
+<meta name="description" content="<%= pageDesc %>">
+<meta name="author" content="Sprax (Christian Koop)">
+
+<meta property="og:type" content="website">
+<meta property="og:title" content="<%= pageTitle %>">
+<meta property="og:site_name" content="<%= pageTitle %>">
+<meta property="og:url" content="<%= url.root %>/">
+<meta property="og:description" content="<%= pageDesc %>">
+<meta property="og:locale" content="de_DE">
+<meta property="og:image" content="<%= url.root %>/img/bg_hd.png">
+<meta property="og:image:width" content="1920">
+<meta property="og:image:height" content="1471">
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:creator" content="@SpraxDev">
+
+<!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       integrity="sha256-nq7J0kse50upWdNiXRDsuGd/AkfaHz0hX8HgCUsCASY=" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
