Add links to GitHub and LICENSE to page footer

--- a/resources/.templates/footer.html
+++ b/resources/.templates/footer.html
@@ -6,6 +6,11 @@
       <a href="<%- url.root %>/privacy" class="link-dark">Datenschutzbestimmung</a>
     </small>
 
-    <small class="text-muted float-end">Copyright &copy; Some rights reserved.</small>
+
+    <small class="text-muted float-end">
+      <a href="https://github.com/SpraxDev/HEMS-Skulpturengarten" class="link-dark" target="_blank"><img
+          src="<%- url.root %>/img/feathericons/github.svg" alt="GitHub repository"></a>
+      <a href="<%- url.root %>/LICENSE" class="link-dark">Copyright &copy; Some rights reserved.</a>
+    </small>
   </div>
 </footer>
