--- a/resources/index.html
+++ b/resources/index.html
@@ -19,7 +19,7 @@
              alt="Zeichnung des Skulpturengartens, aus der Luft">
 
         <!-- Load hd image in the background and show button when ready -->
-        <!-- <img src="img/feathericons/maximize-2.svg" style="padding: revert; position: absolute; top: 15px; right: 15px;" -->
+        <!-- <img src="<%- url.root %>/img/feathericons/maximize-2.svg" style="padding: revert; position: absolute; top: 15px; right: 15px;" -->
         <!-- alt="Click to maximize image" onclick="toggleFullscreen(this)"> -->
 
         <!-- TODO: Add animation to card close -->
