Use percentage for relative position instead of pixels
This drastically improves compatibility small view-ports and other resolutions of the image (with same aspect ration)

--- a/resources/.templates/media.html
+++ b/resources/.templates/media.html
@@ -1,6 +1,6 @@
 <div>
   <button class="rounded-circle btn btn-primary" onclick="onBtnClick(this)" data-target="card<%- index %>"
-          style="padding: revert;font-size: 1.25rem;position: absolute;top: <%- info.coords.y %>px;left: <%- info.coords.x %>px;">
+          style="padding: revert;font-size: 1.25rem;position: absolute;top: <%- info.offset.y %>;left: <%- info.offset.x %>;">
     +
   </button>
 
