--- a/resources/index.html
+++ b/resources/index.html
@@ -13,10 +13,10 @@
 
 <main>
   <div class="container">
-    <div class="d-flex justify-content-center">
+    <div class="d-grid justify-content-center">
       <div id="imgDiv" style="position: relative">
         <img id="imgNode" src="<%- url.root %>/img/bg.png" class="img-fluid" onclick="onBtnClick(null)"
-             alt="Zeichnung des Skulpturengartens, aus der Luft">
+             width="907" height="695" alt="Zeichnung des Skulpturengartens, aus der Luft">
 
         <!-- Load hd image in the background and show button when ready -->
         <!-- <img src="<%- url.root %>/img/feathericons/maximize-2.svg" style="padding: revert; position: absolute; top: 15px; right: 15px;" -->
