--- a/resources/.templates/footer.html
+++ b/resources/.templates/footer.html
@@ -9,7 +9,7 @@
 
     <small class="text-muted float-end">
       <a href="https://github.com/SpraxDev/HEMS-Skulpturengarten" class="link-dark" target="_blank"><img
-          src="<%- url.root %>/img/feathericons/github.svg" alt="GitHub repository"></a>
+          src="<%- url.root %>/img/feathericons/github.svg" width="24" height="24" alt="GitHub repository"></a>
       <a href="<%- url.root %>/LICENSE" class="link-dark">Copyright &copy; Some rights reserved.</a>
     </small>
   </div>
