Overthrow the idea of fullscreen-ing the image

--- a/resources/.templates/scripts.html
+++ b/resources/.templates/scripts.html
@@ -1,2 +1,3 @@
+<!-- Simple Analytics -->
 <script async defer src="https://simplea.sprax2013.de/latest.js"></script>
 <noscript><img src="https://simplea.sprax2013.de/noscript.gif" alt=""></noscript>
