--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="<%- url.root %>/img/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="<%- url.root %>/img/favicon/favicon-32x32.png">
