Optimize videos for streaming

--- a/resources/index.html
+++ b/resources/index.html
@@ -37,13 +37,14 @@
       <h3>Wir im Skulpturengarten Darmstadt</h3>
 
       <p class="blockquote">
-        Im Rahmen der Kurse <em>Kreatives Schreiben</em> und <em>Darstellendes Spiel</em> sind wir
-        mit unseren Lehrerinnen einen Nachmittag im <em>Skulpturengarten Darmstadt</em> gewesen und
+        Im Rahmen der Kurse <em>Kreatives Schreiben</em> und <em>Darstellendes Spiel</em>
+        der Heinrich-Emanuel-Merck-Schule Darmstadt sind wir mit unseren Lehrerinnen
+        einen Nachmittag im <em>Skulpturengarten Darmstadt</em> gewesen und
         wurden dort von Frau Kuhlmann durch das Gelände geführt.
       </p>
 
       <p class="blockquote">
-        Wir haben uns von den einzelnen Ausstellungsstücken unter anderem zu Texten inspirieren lassen und uns dazu
+        Wir haben uns von den einzelnen Ausstellungsstücken zu, unter anderem, Texte inspirieren lassen und uns dazu
         entschlossen, diese aufzubereiten und für Interessierte auf dieser Webseite auszustellen.
       </p>
     </div>
