--- a/resources/.templates/media.html
+++ b/resources/.templates/media.html
@@ -4,8 +4,7 @@
     +
   </button>
 
-  <div class="card text-center d-none animate__animated animate__fadeInDown animate__faster"
-       style="position: absolute" id="card<%- index %>">
+  <div class="card text-center d-none animated" style="position: absolute" id="card<%- index %>">
     <div class="card-body">
       <div class="row">
         <% info.media.forEach((m) => { %>
