--- a/resources/index.html
+++ b/resources/index.html
@@ -23,8 +23,8 @@
                alt="Zeichnung des Skulpturengartens, aus der Luft">
         </picture>
 
-        <!-- TODO: Add animation to card close -->
-
+        <!-- TODO: Add close button to cards -->
+        <!-- TODO: Make sure card is always visible and does not overflow -->
         <% mediaList.forEach((m, index) => { %>
         <%- include(`${RES_DIR}/.templates/media.html`, {info: m, index}); %>
         <% }); %>
