Use PurgeCSS to remove unused CSS
+ Fix error when not closing `fs#opendirSync(string)`

* Moved css and js into own assets directory
* Copied bootstrap.min.css into the repository and use a self-hosted version

--- a/resources/index.html
+++ b/resources/index.html
@@ -53,7 +53,7 @@
 
 <%- include(`${RES_DIR}/.templates/footer.html`); %>
 
-<script src="<%- url.root %>/script.js"></script>
+<script src="<%- url.root %>/assets/script.js"></script>
 
 <%- include(`${RES_DIR}/.templates/scripts.html`); %>
 </body>
