--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -32,6 +32,5 @@
 <meta name="twitter:creator" content="@SpraxDev">
 
 <!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-      integrity="sha256-nq7J0kse50upWdNiXRDsuGd/AkfaHz0hX8HgCUsCASY=" crossorigin="anonymous">
-<link href="<%- url.root %>/style.css" rel="stylesheet">
+<link href="<%- url.root %>/assets/bootstrap.min.css" rel="stylesheet">
+<link href="<%- url.root %>/assets/style.css" rel="stylesheet">
